# embody-file

./: .cookiecutter.json  .flake8  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  noxfile.py  pyproject.toml
.github/workflows/: codeql.yml  constraints.txt  release.yml  tests.yml
docs/: conf.py  index.md  reference.md  requirements.txt
src/embodyfile/: __init__.py  cli.py  embodyfile.py  formatters.py  logging.py  models.py  parser.py  schemas.py
src/embodyfile/exporters/: __init__.py  common.py  csv_exporter.py  hdf_exporter.py  hdf_legacy_exporter.py  parquet_exporter.py
tests/: __init__.py  test_csv_exporter.py  test_embodyfile.py  test_hdf_exporter.py  test_hdf_legacy_exporter.py  test_logging.py  test_parquet_exporter.py  test_parser.py  test_parser_utils.py  test_utils.py
