[project]
name = "embody-file"
version = "1.0.25"
description = "Embody file converter"
license = "MIT"
classifiers = ["Development Status :: 5 - Production/Stable"]
authors = [{ name = "Aidee Health", email = "hello@aidee.io" }]
requires-python = ">=3.11,<4.0"
readme = "README.md"
[project.urls]
Homepage = "https://github.com/aidee-health/embody-file"
Repository = "https://github.com/aidee-health/embody-file"
Changelog = "https://github.com/aidee-health/embody-file/releases"
dependencies = [
    "embody-codec>=1.0.32",
    "pandas>=1.5.1",
    "pytz~=2024.1",
    "tables>=3.10.2,<4",
    "pyarrow>=19.0.1,<20",
]

[project.scripts]
embody-file = "embodyfile.cli:main"

[dependency-groups]
dev = [
    "pytest>=7.2.0",
    "h5py>=3.13.0,<4",
    "Pygments>=2.10.0",
    "black>=21.10b0",
    "coverage[toml]>=6.2",
    "darglint>=1.8.1",
    "flake8>=7.0.0",
    "flake8-bandit>=2.1.2",
    "flake8-bugbear>=21.9.2",
    "flake8-docstrings>=1.6.0",
    "flake8-rst-docstrings>=0.2.5",
    "isort>=5.10.1",
    "mypy>=0.930",
    "pep8-naming>=0.12.1",
    "pre-commit>=2.16.0",
    "pre-commit-hooks>=4.1.0",
    "pyupgrade>=2.29.1",
    "typeguard>=2.13.3",
]

[tool.hatch.build.targets.sdist]
include = ["src/embodyfile"]

[tool.hatch.build.targets.wheel]
include = ["src/embodyfile"]

[tool.hatch.build.targets.wheel.sources]
"src/embodyfile" = "embodyfile"

[tool.coverage.paths]
source = ["src", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["embodyfile", "tests"]

[tool.coverage.report]
show_missing = true
fail_under = 2 # Increase once we have refactored and added tests

[tool.isort]
profile = "black"
force_single_line = true
lines_after_imports = 2

[tool.mypy]
strict = false
warn_unreachable = true
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
